# pymemtrace

./: .gitignore  .project  .pydevproject  .travis.yml  AUTHORS.rst  CMakeLists.txt  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  README.md  README.rst  build_all.sh  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test.py  tox.ini  travis_pypi_setup.py
.github/: ISSUE_TEMPLATE.md
docs/: .gitignore  Makefile  conf.py  make.bat  pymemtrace.dox  usage.rst
docs/source/: conf.py  contributing.rst  examples.rst  history.rst  index.rst  installation.rst  memory_leaks.rst  readme.rst  reference.rst  technical_notes.rst  todo.rst  usage.rst
docs/source/examples/: c_py_mem_trace.rst  debug_malloc_stats.rst  dtrace.rst  process.rst  process_tree.rst  trace_malloc.rst  tracemalloc.rst
docs/source/memory_leaks/: introduction.rst  techniques.rst  tools.rst
docs/source/ref/: c_mem_leak.rst  c_py_mem_trace.rst  cpymemtrace_decs.rst  debug_malloc_stats.rst  process.rst  process_tree.rst  redirect_stdout.rst  trace_malloc.rst
docs/source/ref/util/: dtrace_log_analyse.rst  gnuplot.rst  ref_trace_analyse.rst
docs/source/tech_notes/: cPyMemTrace.rst  cPyMemTrace_ReferenceTracing.rst  cPyMemTrace_ReferenceTracing_MemoryLeaks.rst  cPyMemTrace_design.rst  cPyMemTrace_log_format.rst  cPyMemTrace_perf.rst  dtrace.rst  rss_cost.rst
pymemtrace/: __init__.py  cpymemtrace_decs.py  data.py  debug_malloc_stats.py  example.py  parse_dtrace_output.py  plot_memtrace.py  process.py  process_tree.py  pymemtrace.py  redirect_stdout.py  trace_malloc.py
pymemtrace/examples/: ex_cPyMemTrace.py  ex_cPyMemTrace_RefTrace.py  ex_debug_malloc_stats.py  ex_dtrace.py  ex_memory_exercise.py  ex_process.py  ex_process_decorator.py  ex_process_tree.py  ex_trace_malloc.py  example.py  example_process.py  example_trace_malloc.py  memory_exercise.py
pymemtrace/examples/gnuplot/: process.log_25676.plt
pymemtrace/plot/: Coord.py  PlotMemTrace.py  SVGWriter.py  XmlWrite.py
pymemtrace/src/: main.c
pymemtrace/src/c/: get_rss.c  ht.c  pymemtrace_util.c
pymemtrace/src/cpy/: cCustom.c  cMemLeak.c  cPyMemTrace.c  cPyMemTrace.h  cPyRefTraceExample.c
pymemtrace/src/include/: get_rss.h  ht.h  pymemtrace_util.h
pymemtrace/util/: dtrace_log_analyse.py  gnuplot.py  ref_trace_analyse.py
tech_notes/: cPyMemTrace.md
tests/: __init__.py  _test_redirect_stdout.py  test_cMemLeak.py  test_cpymemtrace.py  test_cpymemtrace_decs.py  test_cpyreftraceexample.py  test_data.py  test_debug_malloc_stats.py  test_plot_memtrace.py  test_process.py  test_pymemtrace.py  test_redirect_stdout.py  test_settrace.py  test_trace_malloc.py
tests/plot/: test_Coord.py  test_PlotMemTrace.py  test_SVGWriter.py  test_XmlWrite.py
tests/util/: test_dtrace_log_analyse.py  test_ref_trace_analyse.py
toolkit/: py_flow_malloc_free.d  py_flowinfo_rss.d  py_malloc.d  py_object_D_WITH_PYMALLOC.d  py_object_U_WITH_PYMALLOC.d  py_object_malloc_free.d  py_syscolors.d
